# game-of-chess

./: Cargo.toml  README.md
src/: board.rs  lib.rs  main.rs  piece.rs  side.rs
src/board/: bitboard.rs
